--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.34.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
