--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.19",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
     "@storybook/addon-links": "^8.0.0",
@@ -54,6 +56,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "semantic-release": "^23.0.3",
+    "semantic-release-license": "^1.0.3",
+    "semantic-release-npm-deprecate-old-versions": "^1.3.4",
+    "semantic-release-replace-plugin": "^1.2.7",
     "storybook": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
