--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mimir-vtt/ui",
+  "description": "UI Lbrary for the MimirVTT project (currently in development)",
   "private": false,
   "version": "0.0.0-development",
   "type": "module",
@@ -7,10 +8,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "echo \"no tests configured\"",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepare": "husky"
   },
   "license": "MIT",
   "repository": {
@@ -30,12 +33,13 @@
     ]
   },
   "dependencies": {
-    "eslint-plugin-react": "^7.34.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.19",
+    "@commitlint/cli": "^19.2.0",
+    "@commitlint/config-conventional": "^19.1.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-essentials": "^8.0.0",
@@ -52,9 +56,12 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "semantic-release": "^23.0.3",
     "semantic-release-license": "^1.0.3",
     "semantic-release-npm-deprecate-old-versions": "^1.3.4",
